// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    class="ui centered card scenario__slide-card"
  >
    <div
      class="content scenario__slide-card-header"
    >
      <div
        class="header"
      >
        <div
          class="ui fluid buttons"
        >
          <button
            class="ui primary button"
          >
            Return to scenarios
          </button>
          <div
            class="or"
          />
          <button
            class="ui button"
          >
            Rerun this scenario
          </button>
        </div>
      </div>
    </div>
    <div
      class="content scenario__slide-card-content-preview"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 2 1 1`] = `
<DocumentFragment>
  <div
    class="ui centered card scenario__slide-card-hidden"
  >
    <div
      class="content scenario__slide-card-header"
    >
      <div
        class="header"
      >
        <div
          class="ui fluid buttons"
        >
          <button
            class="ui primary button"
          >
            Return to scenarios
          </button>
          <div
            class="or"
          />
          <button
            class="ui button"
          >
            Rerun this scenario
          </button>
        </div>
      </div>
    </div>
    <div
      class="content scenario__slide-card-content"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 3 1 1`] = `
<DocumentFragment>
  <div
    class="ui centered card scenario__slide-card-hidden"
  >
    <div
      class="content scenario__slide-card-header"
    >
      <div
        class="header"
      >
        <div
          class="ui fluid buttons"
        >
          <button
            class="ui primary button"
          >
            Return to cohort
          </button>
          <div
            class="or"
          />
          <button
            class="ui button"
          >
            Rerun this scenario
          </button>
        </div>
      </div>
    </div>
    <div
      class="content scenario__slide-card-content"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;
